--- a/flask app/templates/pricing.html
+++ b/flask app/templates/pricing.html
@@ -6,6 +6,8 @@
     <h1>Energy Buyback Pricing Info for Ontario</h1>
     <p>The HOEP is a database that shows exactly what price energy is sold back to the grid each hour. Here is some information on what that pricing looked like in 2023</p>
     <p>More on HOEP <a href="https://www.ieso.ca/power-data/price-overview/hourly-ontario-energy-price" target="_blank">HERE</a>.</p>
+    <p>There is also the Global Adjustment fee of which is not considered as it is based on consumption. </p>
+    <p>For more details see IESO's website <a href="https://www.ieso.ca/Power-Data/Price-Overview/Global-Adjustment" target="_blank">HERE</a></p>
     <body>
         <h1>HOEP Data Visualization</h1>
         <div>{{ hourly_price_plot|safe }}</div>
