battery page upd 2

--- a/flask app/templates/battery.html
+++ b/flask app/templates/battery.html
@@ -21,6 +21,16 @@
                     <td style="border: 1px solid #ddd; padding: 8px;">Islanding Runtime (Hours) </td>
                     <td style="border: 1px solid #ddd; padding: 8px;">{{ battery_runtime }}</td>
                 </tr>
+                
+            </table>
+        </div>
+        <div style="width: 48%;">
+            <h1>Battery Ouput Data</h1>
+            <table style="width: 100%; border-collapse: collapse;">
+                <tr style="background-color: #f2f2f2;">
+                    <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Parameter</th>
+                    <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
+                </tr>
                 <tr>
                     <td style="border: 1px solid #ddd; padding: 8px;">Battery Capacity Needed (kWh)  </td>
                     <td style="border: 1px solid #ddd; padding: 8px;">{{ battery_capacity }}</td>
