--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -303,7 +303,7 @@
                 <td>Megapack 1462965-XX-Y</td>
                 <td>1,927 kW / 3,854 kWh</td>
                 <td>92.0%</td>
-                <td>$2,883,732.34 / Unit</td>
+                <td>$2,883,732.34 / Unit <br>$748.25 / kWh</td>
                 <td>
                     <a href="https://www.tesla.com/megapack/design" target="_blank">Megapack Info Page</a>
                     <p> </p>
