--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -98,6 +98,9 @@
 <div>{{ wind_ROI_plot|safe }}</div>
 <div>{{ wind_rev_plot|safe }}</div>
 
+<div>{{ hourly_wind_revenue_plot|safe }}</div>
+<h3>Total Yearly Wind Revenue at HOEP Pricing: ${{ total_wind_revenue | round(2) }}</h3>
+
 
 {% endblock %}
 
