solar and wind HOEP added

--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -94,7 +94,7 @@
     <div>{{ solar_rev_plot|safe }}</div>
     
     <div>{{ hourly_solar_revenue_plot|safe }}</div>
-    <h3>Total Yearly Solar Revenue ${{ total_solar_revenue | round(2) }}</h3>
+    <h3>Total Yearly Solar Revenue from HEOP${{ total_solar_revenue | round(2) }}</h3>
 
     <!-- <a href="{{ url_for('download_csv') }}" class="btn btn-primary">Download Data as CSV</a> -->
 
