solar and wind new tables

--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -112,6 +112,7 @@
         </table>
     </div>
 </div>
+<p>Solar degredation model taken from: <a href="{{ url_for('static', filename='datasheets/Bauer-Solar-CANSOLAR (1).pdf') }}" target="_blank">Data Sheet PDF</a></p>
 
     <br>
 
