--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -50,16 +50,59 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Yearly Average Wind Speeds (m/s)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ average_yearly_speed | round(3) }}</td>
             </tr>
-            <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Upfront Cost [CAD]</td>
-                <td style="border: 1px solid #ddd; padding: 8px;">${{ wind_cost | round(2) }}</td>
-            </tr>
             
         </table>
     </div>
     
 
-</div>    
+</div> 
+
+<div style="display: flex; justify-content: space-between;">
+    <div style="width: 48%;">
+        <h1>Wind Project Financials</h1>
+        <table style="width: 100%; border-collapse: collapse;">
+            <tr style="background-color: #f2f2f2;">
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Financials</th>
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Cost</th>
+            </tr>
+            
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>Total Installed Upfront Cost of Wind [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>${{ wind_cost | round(2) }}</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Total Revenue over a lifetime of 30 years with degredation from wind with buyback of $0.1/kWh [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">${{ min_buyback_total_rev | round(2) }}</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>Total profit over a lifetime of 30 years with degredation from Wind with buyback of $0.1/kWh [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>${{ total_project_profit_w_degredation | round(2) }}</td>
+            </tr>
+           
+        </table>
+    </div>
+    <div style="width: 48%;">
+        <h1>Wind Project Metrics</h1>
+        <table style="width: 100%; border-collapse: collapse;">
+           
+            <tr style="background-color: #f2f2f2;">
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Key Project Metrics</th>
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Return on Investment from Wind with degredation with buyback of $0.1/kWh [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">%{{ min_buyback_roi | round(2) }}</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Payback Period from Wind with degredation with buyback of $0.1/kWh [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ min_buyback_payback_period | round(2) }} years</td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+<p>Wind Turbine degredation Model from this resource: <a href='https://www.sciencedirect.com/science/article/pii/S0960148113005727#:~:text=With%20an%20absolute%20degradation%20rate,output%20per%20year%20on%20average.' target="_blank">Here</a><p>
+
 <br>
 
 <h1>Wind Energy Insights</h1>
