--- a/flask app/templates/summary.html
+++ b/flask app/templates/summary.html
@@ -4,18 +4,6 @@
 
 {% block content %}
 
-        <!-- wind_project_revenue=wind_project_revenue,
-        wind_project_payback_period=wind_project_payback_period,
-        wind_project_roi=wind_project_roi,
-        wind_project_profit=wind_project_profit,
-
-        solar_pannel_cost=solar_pannel_cost,
-        solar_mount_cost=solar_mount_cost,
-        solar_total_cost=solar_total_cost,
-        solar_project_revenue=solar_project_revenue,
-        solar_project_payback_period=solar_project_payback_period,
-        solar_project_roi=solar_project_roi,
-        solar_project_profit=solar_project_profit -->
 
 
 <div style="display: flex; justify-content: space-between;">
@@ -27,11 +15,11 @@
             
             <tr style="background-color: #f2f2f2;">
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">System</th>
-                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Cost [CAD]</th>
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Upfront Costs [CAD]</th>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Aeolos Wind Turbines</td>
-                <td style="border: 1px solid #ddd; padding: 8px;">${{ wind_upfront_cost | round(2) }}</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Aeolos Wind Turbines Cost</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">$ {{ wind_upfront_cost | round(2) }}</td>
             </tr>
             <tr>
                 <td style="border: 1px solid #ddd; padding: 8px;">Solar Pannels Cost</td>
@@ -41,32 +29,42 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Solar Mounts Cost</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">$ {{ solar_mount_cost | round(2) }}</td>
             </tr>
-          
-           
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Battery Cost</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">$ {{ battery_upfront_cost | round(2) }} </td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>Total Project Cost</td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>$ {{ total_project_costs | round(2) }}</td>
+            </tr>
             
         </table>
     </div>
 
     <!-- Wind System Outputs Column -->
     <div style="width: 48%;">
-        <h1>30 Lifetime Project Revenue</h1>
+        <h1>30 Year Lifetime Project Revenue</h1>
         <table style="width: 100%; border-collapse: collapse;">
             <tr style="background-color: #f2f2f2;">
-                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Parameter</th>
-                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">System</th>
+                <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Project Total Revenue [CAD]</th>
             </tr>
             
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">System Capacity (kW)</td>
-                <td style="border: 1px solid #ddd; padding: 8px;"></td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Wind Turbine Revenue</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">$ {{ wind_project_revenue | round(2) }}</td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Yearly Wind Generation (kWh)</td>
-                <td style="border: 1px solid #ddd; padding: 8px;"></td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Solar System Revenue</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">$ {{ solar_project_revenue | round(2) }}</td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Yearly Average Wind Speeds (m/s)</td>
-                <td style="border: 1px solid #ddd; padding: 8px;"></td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Battery System Revenue</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">$ {{ battery_project_revenue | round(2) }}</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>Total Project Revenue</td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>$ {{ total_project_revenue | round(2) }}</td>
             </tr>
             
         </table>
@@ -80,7 +78,7 @@
 
     <!-- Solar Input Data Column -->
     <div style="width: 48%;">
-        <h1>Project Balance</h1>
+        <h1>Project Key Metrics</h1>
         <table style="width: 100%; border-collapse: collapse;">
             
             <tr style="background-color: #f2f2f2;">
@@ -88,14 +86,17 @@
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Number of Aeolos Turbines</td>
-                <td style="border: 1px solid #ddd; padding: 8px;"></td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>Total Project Profit</td>
+                <td style="border: 1px solid #ddd; padding: 8px;"><b>$ {{ total_project_profit | round(2) }} </td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Turbine height (m)</td>
-                <td style="border: 1px solid #ddd; padding: 8px;"></td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Project Return on Investment (ROI)</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ total_roi | round(2) }} %</td>
             </tr>
-           
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Project Payback Period (averaged based on total revenue and lifetime)</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ total_payback_period | round (2) }} years</td>
+            </tr>
           
            
             
