--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -91,7 +91,7 @@
             </tr>
             <tr>
                 <td style="border: 1px solid #ddd; padding: 8px;">Return on Investment from Wind with degredation with buyback of $0.1/kWh [CAD]</td>
-                <td style="border: 1px solid #ddd; padding: 8px;">%{{ min_buyback_roi | round(2) }}</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ min_buyback_roi | round(2) }} %</td>
             </tr>
             <tr>
                 <td style="border: 1px solid #ddd; padding: 8px;">Payback Period from Wind with degredation with buyback of $0.1/kWh [CAD]</td>
