--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -54,7 +54,7 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ total_ac_yearly | round(2) }}</td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Number of Solar Pannels (rounded)</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Number of Solar Panels (rounded)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ num_pannels | round(0) }}</td>
             </tr>
             
@@ -71,7 +71,7 @@
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Cost</th>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Cost of Solar Pannels [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Cost of Solar Panels [CAD]</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">${{ solar_cost | round(2) }}</td>
             </tr>
             <tr>
