--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -134,7 +134,7 @@
 
 <br><br>
 <h1>Wind Financial Analysis </h1>
-<p>In each sensativity analysis the middle redline represents the calculated generation while the other lines above and below represent if the system generates more or less energy.</p>
+<p>In each sensitivity analysis the middle redline represents the calculated generation while the other lines above and below represent if the system generates more or less energy.</p>
 <p>Specifically each plot shows 1/3, 1/2, 2/3, 1, 1.2, 1.4, 1.6, 2 times the calculated capacity</p>
 <div>{{ wind_payback_plot|safe }}</div>
 <br>
