spelling fix again

--- a/flask app/templates/summary.html
+++ b/flask app/templates/summary.html
@@ -22,7 +22,7 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">$ {{ wind_upfront_cost | round(2) }}</td>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Solar Pannels Cost</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Solar Panels Cost</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">$ {{ solar_pannel_cost | round(2) }}</td>
             </tr>
             <tr>
