wind log fit comment

--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -109,6 +109,7 @@
 
 
 <div>{{ plot1|safe }}</div>
+<p>Below is the average correlation of elevation above ground level to wind speed for this specific location.</p>
 <div>{{ plot2|safe }}</div>
 <br>
 <h2>Select a Month to Display Hourly Wind Speeds</h2>
