--- a/flask app/templates/pricing.html
+++ b/flask app/templates/pricing.html
@@ -12,10 +12,11 @@
         <h1>HOEP Data Visualization</h1>
         <div>{{ hourly_price_plot|safe }}</div>
     </body>
-    <h3>The average 2023 cost of electricity: ${{ average_2023 | round(2) }} /MWh</h3>
+    <h3>The average 2023 cost of electricity (in CAD): ${{ average_2023 | round(2) }} /MWh</h3>
     <body>
         <h1>HOEP Yearly Hour of the Day Price Averages</h1>
         <div>{{ hourly_avg_price_plot|safe }}</div>
     </body>
+    <h3>The average cost of electricity over 2021-2023 (in CAD): ${{ three_year_average | round(2) }} /MWh</h3>
     
 {% endblock %}
