--- a/flask app/templates/battery.html
+++ b/flask app/templates/battery.html
@@ -48,7 +48,7 @@
                     <td style="border: 1px solid #ddd; padding: 8px;">${{ total_upfront_battery_cost | round(2) }}</td>
                 </tr>
                 <tr>
-                    <td style="border: 1px solid #ddd; padding: 8px;">Total Minimum Revenue over battery lifetime from {{ min_profit_soc_type }} charging profile  </td>
+                    <td style="border: 1px solid #ddd; padding: 8px;">Total Minimum Revenue over calculated battery lifetime from {{ min_profit_soc_type }} charging profile  </td>
                     <td style="border: 1px solid #ddd; padding: 8px;">${{ min_profit | round(2) }}</td>
                 </tr>
                 <tr>
