--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -102,7 +102,7 @@
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
             </tr>
             <tr>
-                <td style="border: 1px solid #ddd; padding: 8px;">Return on Investment from Solar with degredation with buyback of $0.1/kWh [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Return on Investment over 30 year lifetime from Solar with degredation with buyback of $0.1/kWh [CAD]</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ min_buyback_roi | round(2) }} %</td>
             </tr>
             <tr>
