cleaned up words

--- a/flask app/templates/battery.html
+++ b/flask app/templates/battery.html
@@ -23,8 +23,8 @@
                 </tr>
                 
                 <tr>
-                    <td style="border: 1px solid #ddd; padding: 8px;"> Final Battery Capacity As a fraction % </td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">{{ battery_final_percent }}</td>
+                    <td style="border: 1px solid #ddd; padding: 8px;"> Final Battery Capacity % </td>
+                    <td style="border: 1px solid #ddd; padding: 8px;">{{ battery_final_percent_int }} %</td>
                 </tr>
                 <tr>
                     <td style="border: 1px solid #ddd; padding: 8px;">Maxiumum Number of cycles </td>
