rm regex pattern for location

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -93,7 +93,7 @@
     <form method="post">
         <h3>Location</h3>
         <label for="postalCode">Postal Code:</label>
-        <input type="text" id="postalCode" name="postalCode" pattern="[A-Za-z0-9]{3,}"><br><br>
+        <input type="text" id="postalCode" name="postalCode"><br><br>
     
 
         <h3>Solar Inputs</h3>
