added buyback static

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -148,8 +148,12 @@
         <h4 id="AdvancedBatteryText"></h4>
        
         <div id="AdvancedBatterycontent"></div>
+        
+        <h3>Buyback Pricing</h3>
+        <label for="buybackPrice">Buyback Price $CAD:</label>
+        <input type="floatformat" id="buybackPrice" name="buybackPrice">
+
         <br><br>
-    
         <input type="submit" value="Submit">
     </form>
     
