--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -29,6 +29,10 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Tilt (degrees)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ tilt }}</td>
             </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Buyback Price $CAD</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ buyback_price }}</td>
+            </tr>
         </table>
     </div>
 
