rm buyback price input

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -149,9 +149,9 @@
        
         <div id="AdvancedBatterycontent"></div>
         
-        <h3>Buyback Pricing</h3>
+        <!--<h3>Buyback Pricing</h3>
         <label for="buybackPrice">Buyback Price $CAD:</label>
-        <input type="floatformat" id="buybackPrice" name="buybackPrice">
+        <input type="floatformat" id="buybackPrice" name="buybackPrice">-->
 
         <br><br>
         <input type="submit" value="Submit">
