fixed depreciated location

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -92,8 +92,15 @@
 
     <form method="post">
         <h3>Location</h3>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" placeholder="e.g., Waterloo" required>
+        <br><br>
         <label for="postalCode">Postal Code:</label>
-        <input type="text" id="postalCode" name="postalCode"><br><br>
+        <input type="text" id="postalCode" name="postalCode" required>
+        <br><br>
+        <label for="country">Country:</label>
+        <input type="text" id="country" name="country" placeholder="e.g., Canada" required>
+        <br><br>
     
 
         <h3>Solar Inputs</h3>
