--- a/flask app/templates/location.html
+++ b/flask app/templates/location.html
@@ -8,8 +8,12 @@
     <p><strong>Inputted Postal Code:</strong> {{ postal_code }}</p>
     <p><strong>Latitude:</strong> {{ latitude }}</p>
     <p><strong>Longitude:</strong> {{ longitude }}</p>
-    <p><strong>Elevation:</strong> {{ elivation | round(2)}} meters</p>
-    <p><strong>Distance from Postal Code to Nearest Station Site:</strong> {{ distance }} meters</p>
+    {% if elivation is number %}
+     <p><strong>Elevation:</strong> {{ elivation | round(2) }} meters</p>
+    {% else %}
+     <p><strong>Elevation:</strong> Not available</p>
+    {% endif %}
+      <p><strong>Distance from Postal Code to Nearest Station Site:</strong> {{ distance }} meters</p>
 
     {% if latitude and longitude %}
     <h2>Station Site Location on Map</h2>
